--- a/client/src/components/loginForm/LogInForm.css
+++ b/client/src/components/loginForm/LogInForm.css
@@ -1,5 +1,3 @@
-
-
 input{
     @apply bg-background-medium rounded-lg  border-highlight-color p-2 mb-5 transition-all ease-in-out duration-300;
 }
@@ -25,11 +23,9 @@ button:hover{
 }
 
 .login-form{
-    @apply flex flex-col justify-between p-4 rounded-xl m-auto mt-40;
+    @apply flex flex-col self-center p-4 rounded-xl;
     width: 20%;
     height: 20%;
-<<<<<<< HEAD
-=======
     margin-left: 40%;
     margin-top: 10%;
 }
@@ -40,5 +36,4 @@ button:hover{
 
 .forgot-password{
     @apply text-highlight-color text-sm underline self-end mb-5 cursor-pointer;
->>>>>>> origin
 }
