--- a/client/src/components/userProfile/userProfile.css
+++ b/client/src/components/userProfile/userProfile.css
@@ -3,7 +3,7 @@
     @apply grid grid-cols-2 gap-8 p-6 h-screen rounded-lg;
 }
 .login-info {
-    @apply grid grid-cols-2 grid-rows-2;
+    @apply grid grid-cols-2 grid-rows-2 p-6;
 }
 .PFP-upload {
     @apply row-span-2;
