--- a/client/src/components/cardGrid/CardGrid.css
+++ b/client/src/components/cardGrid/CardGrid.css
@@ -9,3 +9,7 @@
     z-index: 1000;
     @apply fixed top-0 left-0 w-full h-full flex justify-center items-center ;
 }
+
+.loading-container {
+    @apply flex justify-center items-center absolute top-0 left-0 w-full h-full;
+}
