--- a/client/src/components/messageDashboard/MessageDashboard.css
+++ b/client/src/components/messageDashboard/MessageDashboard.css
@@ -1,5 +1,3 @@
-
-
 .MessageDashboard{
     @apply grid gap-4 overflow-hidden;
     width: 100dvw;
@@ -8,8 +6,17 @@
     grid-template-columns: 18rem 1fr;
     grid-template-rows: auto 1fr;
     /* grid-template-rows: 1fr 4rem;  */
+    
 }
+.MessageDashboard.collapsed{
+    @apply grid gap-4 overflow-hidden;
+    width: 100dvw;
+    height: 100vh;
 
+    grid-template-columns: 0 1fr;
+    grid-template-rows: auto 1fr;
+    /* grid-template-rows: 1fr 4rem;  */
+}
 #contact-back-arrow, #contact-profile-icon{
     @apply h-10;
 }
@@ -25,7 +32,12 @@
     max-height: 100vh;
     display: flex;
     flex-direction: column;
+    transform: translateX(0%);
 }
+.Contacts.collapsed{
+    transform: translateX(-100%);
+}
+
 
 .contact-header{
     @apply flex justify-between items-center mb-4 ; 
@@ -67,4 +79,16 @@
 .navbar{
     grid-template-columns: 1/2;
     grid-template-rows: 1/2;
+    
 }
+.tab-rect.collapsed {
+    @apply absolute top-1/2 -translate-y-1/2 scale-50 bg-highlight-color w-10 h-20 -left-1 rounded-lg;
+    margin-left:-10px;
+    z-index:10;
+}
+.tab-rect.expanded {
+    @apply absolute top-1/2 -translate-y-1/2 scale-50 bg-highlight-color w-10 h-20 -left-1 rounded-r-lg;
+    margin-left:282px;
+    z-index:10;
+}
+
