--- a/client/src/components/messageDashboard/MessageDashboard.css
+++ b/client/src/components/messageDashboard/MessageDashboard.css
@@ -68,3 +68,7 @@
     grid-template-columns: 1/2;
     grid-template-rows: 1/2;
 }
+
+.loading-container {
+    @apply flex justify-center items-center w-full h-full;
+}
